<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userDetailsLayout">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <EditText
            android:id="@+id/userNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/EnterUserName"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Email"
            app:layout_constraintTop_toBottomOf="@+id/userNameET"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/EnterEmail"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/PhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/emailET"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <EditText
            android:id="@+id/phoneNumberET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/EnterPhoneNumber"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/pinCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PinCode"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberET"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <EditText
            android:id="@+id/pinCodeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/EnterPinCode"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/pinCode"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Address"
            app:layout_constraintTop_toBottomOf="@+id/pinCodeET"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/EnterAddress"
            app:layout_constraintTop_toBottomOf="@+id/address"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp" />

        <Button
            android:id="@+id/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Validate"
            app:layout_constraintTop_toBottomOf="@+id/addressET"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="139dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupedViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="userNameET,emailET,phoneNumberET,pinCodeET,addressET" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>