<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Cancel"
        app:layout_constraintTop_toBottomOf="@id/confirmButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.Group
        android:id="@+id/groupedButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="cancelButton,confirmButton" />


</androidx.constraintlayout.widget.ConstraintLayout>